@@ -24,7 +24,7 @@ $Id$
   - Calculate expected working counter for domains.
   - Optimize alignment of process data.
   - Evaluate EEPROM contents after writing.
-  - SDO dictionary and -access in operation mode.
+  - SDO dictionary fetching in operation mode.
   - SDO write access in sysfs.
   - Speed up IDLE state machine through fast mode with schedule().
   - Configure slave ports to automatically open on link detection.
